2009-07-09  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes required to support shaders.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Initialize GLEW from Pupil::draw(), not from the context-holder
	window.

	* Rnr/GL/ZGlass_GL_Rnr.cxx:
	* Rnr/GL/ZGlass_GL_Rnr.h:
	Add function 'bool check_gl_error(const TString& msg)'.

	* macros/gl_defines.h:
	Add tokens for GL 1.4 and 1.5.
	Add selected tokens for GL 2.0.

2009-06-27  Matevz Tadel  <matevz.tadel@ijs.si>

	Rewrite socket selector handling.
	Due to changes is TSocket the file descriptor is not available
	after the other side has closed a connection.

	* Gled/GSelector.cxx:
	* Gled/GSelector.h:
	Reverse key-value roles in map that stores file descriptor to
	user-data (socket pointer) correspondence.
	Introduce helper struct GFdSet to encapsulate adding and removing
	of fd-set entries via Add/Remove() functions.

	* Ephra/Saturn.cxx:
	Adapt for changes in GSelector.

2009-06-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fix perl library path setup.

	* bin/gled-auth-genkeypair:
	* bin/gled-auth-init:
	Put extraction of $DATADIR into BEGIN block.

2009-06-21  Matevz Tadel  <matevz.tadel@ijs.si>

	Improve handling of fov, z-size and home-command in Pupil.

	* Glasses/CameraInfo.cxx:
	* Glasses/CameraInfo.h:
	Add data-members mDefZFov and mDefZSize.

	* Glasses/PupilInfo.cxx:
	* Glasses/PupilInfo.h:
	Add data-members mDefZFov and mDefZSize.
	Add data-members mZoomFac, mMinZFov and mMaxZFov.
	Add method Home(Bool_t smooth).

	* Pupils/Pupil.cxx:
	When home key is pressed, call PupilInfo::Home() via MIR.
	Remove some old commented code.

2009-06-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Make GuiPupil mostly work on mac.

	* Pupils/GuiPupil.cxx:
	Create pupil in-place instead of creating it as a top-level window
	and then swallowing it.

	* Pupils/Pupil.cxx:
	* Pupils/Pupil.h:
	Add constructor taking x, y position.
	Restore Fl_Group::current() when creating gl_ctx_holder window.

2009-06-13  Matevz Tadel  <matevz.tadel@ijs.si>
